# FC-256

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE
cmake/: base.cmake  compilers.cmake  debug.cmake  warnings.cmake
docs/: cpu.txt  memory.txt  opcodes.txt  specs.txt  syntax.txt  vectors.txt
examples/: test.asm
include/: common.h  cpu.h  log.h  opcode.h  opcodes.h  operand.h  types.h
include/asm/: lex.h  parser.h  token.h
include/emu/: cpu.h  opcode.h  operand.h
include/log/: log.h
src/: common.c  cpu.c  log.c  main.c  opcode.c  operand.c
src/asm/: lex.c  token.c
src/emu/: cpu.c  opcode.c  operand.c
src/log/: log.c
